--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,13 @@
 
 body{
   overflow-x: hidden;
-  /* background-color: blue; */
-  /* background: linear-gradient(90deg, hsla(204, 62%, 42%, 1) 0%, hsla(277, 100%, 65%, 1) 100%); */
-  background:linear-gradient(90deg, hsla(74, 51%, 89%, 1) 0%, hsla(96, 12%, 50%, 1) 100%);
-
-}
-.body{
-  /* background: linear-gradient(90deg, hsla(204, 91%, 79%, 1) 0%, hsla(277, 76%, 89%, 1) 100%); */
-  background:linear-gradient(270deg, hsla(74, 51%, 89%, 1) -20%, hsla(96, 12%, 50%, 1) 100%);
-
+  background-color: #97bfad;
+  /* background: linear-gradient(90deg, hsla(163, 15%, 9%, 1) 0%, hsla(152, 23%, 34%, 1) 100%); */
+ 
 }
 .text-gradient {
-  /* background: linear-gradient(90deg, hsla(204, 92%, 19%, 1) 0%, hsla(277, 84%, 57%, 1) 100%); */
-  background:linear-gradient(90deg,hsla(96, 12%, 50%, 1) 30%, rgb(55, 58, 46)  100%);
+
+  background: linear-gradient(90deg, rgba(51,98,98,1) 0%, rgba(23,62,28,1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -24,6 +18,14 @@ body{
   background-color: rgba(255, 255, 255,0.5);
 }
 
+.noto-serif-display-hello{
+  font-family: "Noto Serif Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 .poppins-thin {
   font-family: "Poppins", sans-serif;
   font-weight: 100;
