--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,19 @@
   .appear {
     animation: appear 1s forwards ease-out; /* Slower animation */
   }
+
+
+  /* Tailwind CSS classes for slide animation */
+.slide-enter {
+    @apply transform translate-x-full opacity-0;
+  }
+  .slide-enter-active {
+    @apply transform translate-x-0 opacity-100 transition-all duration-300 ease-in-out;
+  }
+  .slide-exit {
+    @apply transform translate-x-0 opacity-100;
+  }
+  .slide-exit-active {
+    @apply transform -translate-x-full opacity-0 transition-all duration-300 ease-in-out;
+  }
+  
