--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,22 @@ body{
   background-color: rgba(255, 255, 255,0.5);
 }
 
+  /* Tailwind CSS classes for slide animation */
+  .slide-enter {
+    @apply transform translate-x-full opacity-0;
+  }
+  .slide-enter-active {
+    @apply transform translate-x-0 opacity-100 transition-all duration-[3000ms] ease-in;
+  }
+  .slide-exit {
+    @apply transform translate-x-0 opacity-100;
+  }
+  .slide-exit-active {
+    @apply transform -translate-x-full opacity-0 transition-all duration-[3000ms] ease-in;
+  }
+  
+
+
 .noto-serif-display-hello{
   font-family: "Noto Serif Display", serif;
   font-optical-sizing: auto;
