added the blog page

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body{
   overflow-x: hidden;
-  background-color: #97bfad;
+  background-color: #193E30;
   /* background: linear-gradient(90deg, hsla(163, 15%, 9%, 1) 0%, hsla(152, 23%, 34%, 1) 100%); */
  
 }
