--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,16 @@
 
 body{
   overflow-x: hidden;
-  background-color: #193E30;
+  background-color: #c6f2f7;
+  /* background-color: #193E30; */
   /* background: linear-gradient(90deg, hsla(163, 15%, 9%, 1) 0%, hsla(152, 23%, 34%, 1) 100%); */
 }
 .text-gradient {
-
-  background: linear-gradient(90deg, rgba(51,98,98,1) 0%, rgba(23,62,28,1) 100%);
+  background: linear-gradient(to right, #80a8bd, #90caf9, #6cb366,#355655);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  background-clip: text;
+  
 }
 .nav{
   background-color: rgba(255, 255, 255,0.5);
